# corgi-console

./: CMakeLists.txt  install.bat
cmake/: Config.cmake.in
include/corgi/console/: console.h
include/corgi/plot/: plot.h
src/: CMakeLists.txt  plot.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
